k8s/namespace.yaml
# Kubernetes - Parcial #2 - Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: microapp
