k8s/orders.yaml
# Kubernetes - Parcial #2 - Orders Service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-svc
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-svc
  template:
    metadata:
      labels:
        app: orders-svc
    spec:
      containers:
      - name: orders-service
        image: xjuanes21/orders-service:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
spec:
  type: ClusterIP
  ports:
  - port: 3003
    targetPort: 3003
  selector:
    app: orders-svc
