k8s/users.yaml
# Kubernetes - Parcial #2 - Users Service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-svc
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-svc
  template:
    metadata:
      labels:
        app: users-svc
    spec:
      containers:
      - name: users-service
        image: xjuanes21/users-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: users-svc
